CMake changes: Add recently added files, re-enable gcm.cpp, disable recompiler.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@39 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(gekko)
 
 # silence some spam
 add_definitions(-Wno-attributes)
+add_definitions(-DSINGLETHREADED)
 
 # dependency checking
 include(FindSDL REQUIRED)
