--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SRCS	src/core.cpp
 			src/boot/bootrom.cpp
 			src/dvd/dol.cpp
 			src/dvd/elf.cpp
-#			src/dvd/gcm.cpp # TODO: Needs build fixing
+			src/dvd/gcm.cpp
 #			src/dvd/gcm_dump.cpp # TODO: Needs build fixing
 			src/dvd/loader.cpp
 			src/dvd/realdvd.cpp
@@ -32,24 +32,24 @@ set(SRCS	src/core.cpp
 			src/powerpc/disassembler/ppc_disasm.cpp
 			src/powerpc/interpreter/cpu_int.cpp
 			src/powerpc/interpreter/cpu_int_opcodes.cpp
-			src/powerpc/recompiler/cpu_rec_assembler.cpp
-			src/powerpc/recompiler/cpu_rec_assembler_fpu.cpp
-			src/powerpc/recompiler/cpu_rec_assembler_jumps.cpp
-			src/powerpc/recompiler/cpu_rec_assembler_loadstore.cpp
-			src/powerpc/recompiler/cpu_rec_il_compiler.cpp
-			src/powerpc/recompiler/cpu_rec_il_registers_fpu.cpp
-			src/powerpc/recompiler/cpu_rec_il_registers_x86.cpp
-			src/powerpc/recompiler/cpu_rec_il_regs.cpp
-			src/powerpc/recompiler/cpu_rec_int.cpp
-			src/powerpc/recompiler/cpu_rec_memory.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_branch.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_compare.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_loadstore.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_loadstore_fpu.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_math.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_math_fpu.cpp
-			src/powerpc/recompiler/cpu_rec_opcodes_ps.cpp
-			src/powerpc/recompiler/cpu_rec_regcache.cpp
+#			src/powerpc/recompiler/cpu_rec_assembler.cpp
+#			src/powerpc/recompiler/cpu_rec_assembler_fpu.cpp
+#			src/powerpc/recompiler/cpu_rec_assembler_jumps.cpp
+#			src/powerpc/recompiler/cpu_rec_assembler_loadstore.cpp
+#			src/powerpc/recompiler/cpu_rec_il_compiler.cpp
+#			src/powerpc/recompiler/cpu_rec_il_registers_fpu.cpp
+#			src/powerpc/recompiler/cpu_rec_il_registers_x86.cpp
+#			src/powerpc/recompiler/cpu_rec_il_regs.cpp
+#			src/powerpc/recompiler/cpu_rec_int.cpp
+#			src/powerpc/recompiler/cpu_rec_memory.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_branch.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_compare.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_loadstore.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_loadstore_fpu.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_math.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_math_fpu.cpp
+#			src/powerpc/recompiler/cpu_rec_opcodes_ps.cpp
+#			src/powerpc/recompiler/cpu_rec_regcache.cpp
 			src/video/gx_fifo.cpp
 			src/video/gx_states.cpp
 			src/video/gx_tev.cpp
