--- a/src/pcafe/CMakeLists.txt
+++ b/src/pcafe/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SRCS	src/pcafe.cpp)
 
 add_executable(pcafe ${SRCS})
-target_link_libraries(pcafe core input_common common)
+target_link_libraries(pcafe core input_common common ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW)
 
 #install(TARGETS pcafe RUNTIME DESTINATION ${bindir})
