--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,7 @@ add_subdirectory(common)
 add_subdirectory(core)
 add_subdirectory(input_common)
 add_subdirectory(pcafe)
+
+if(QT4_FOUND AND QT_QTCORE_FOUND AND QT_QTGUI_FOUND AND NOT DISABLE_QT4)
+    add_subdirectory(gekko_qt)
+endif()
