Updated project files to reference video_common
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@57 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -395,6 +395,7 @@
       <CallingConvention>FastCall</CallingConvention>
       <AdditionalIncludeDirectories>$(SolutionDir)\externals\sdl-1.2.15\include;$(SolutionDir)\externals\rapidxml-1.13</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <PreprocessorDefinitions>DEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
