--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -12,6 +12,9 @@
     <ClCompile Include="src\bp_mem.cpp" />
     <ClCompile Include="src\vertex_loader.cpp" />
     <ClCompile Include="src\cp_mem.cpp" />
+    <ClCompile Include="src\fifo.cpp" />
+    <ClCompile Include="src\renderer_base.cpp" />
+    <ClCompile Include="src\video_core.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h">
@@ -19,5 +22,9 @@
     </ClInclude>
     <ClInclude Include="src\bp_mem.h" />
     <ClInclude Include="src\vertex_loader.h" />
+    <ClInclude Include="src\cp_mem.h" />
+    <ClInclude Include="src\fifo.h" />
+    <ClInclude Include="src\renderer_base.h" />
+    <ClInclude Include="src\video_core.h" />
   </ItemGroup>
 </Project>
