gekko-qt: Booting the selected image works now. File->Load Image implemented.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@63 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/gekko_qt.vcxproj
+++ b/src/gekko_qt/gekko_qt.vcxproj
@@ -90,6 +90,7 @@
     </MOC>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\bootmanager.cpp" />
     <ClCompile Include="src\disasm.cpp" />
     <ClCompile Include="src\gekko_regs.cpp" />
     <ClCompile Include="src\image_info.cpp" />
@@ -110,6 +111,7 @@
     <UIC Include="src\main.ui" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\bootmanager.h" />
     <ClInclude Include="src\version.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
