--- a/src/gekko_qt/CMakeLists.txt
+++ b/src/gekko_qt/CMakeLists.txt
@@ -1,22 +1,26 @@
 set(SRCS
+            src/bootmanager.cpp
             src/disasm.cpp
             src/gekko_regs.cpp
+            src/image_info.cpp
             src/main.cpp)
 
 qt4_wrap_ui(UI_HDRS
                     src/disasm.ui
                     src/gekko_regs.ui
+                    src/image_info.ui
                     src/main.ui)
 
 qt4_wrap_cpp(MOC_SRCS
                         src/disasm.hxx
                         src/gekko_regs.hxx
+                        src/image_info.hxx
                         src/main.hxx)
 
 # add uic results to include directories
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(gekko-qt ${SRCS} ${MOC_SRCS} ${UI_HDRS})
-target_link_libraries(gekko-qt core input_common common ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW)
+target_link_libraries(gekko-qt core video_core input_common common ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
 
 #install(TARGETS gekko-qt RUNTIME DESTINATION ${bindir})
