--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(common)
 add_subdirectory(core)
+add_subdirectory(video_core)
 add_subdirectory(input_common)
 add_subdirectory(pcafe)
 
