Add new debugger interface (stubbed and incomplete for now).
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@68 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRCS	src/core.cpp
 			src/memory.cpp
 			src/boot/apploader.cpp
 			src/boot/bootrom.cpp
+            src/debugger/debugger.cpp
 			src/dvd/dol.cpp
 			src/dvd/elf.cpp
 			src/dvd/gcm.cpp
