--- a/src/gekko_qt/CMakeLists.txt
+++ b/src/gekko_qt/CMakeLists.txt
@@ -24,6 +24,6 @@ qt4_wrap_cpp(MOC_SRCS
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(gekko-qt ${SRCS} ${MOC_SRCS} ${UI_HDRS})
-target_link_libraries(gekko-qt core video_core input_common common ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
+target_link_libraries(gekko-qt core video_core input_common common qhexedit ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
 
 #install(TARGETS gekko-qt RUNTIME DESTINATION ${bindir})
