--- a/src/video_core/video_core.vcxproj.filters
+++ b/src/video_core/video_core.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClCompile Include="src\fifo.cpp" />
     <ClCompile Include="src\renderer_base.cpp" />
     <ClCompile Include="src\video_core.cpp" />
+    <ClCompile Include="src\xf_mem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\renderer_gl3\renderer_gl3.h">
@@ -26,5 +27,6 @@
     <ClInclude Include="src\fifo.h" />
     <ClInclude Include="src\renderer_base.h" />
     <ClInclude Include="src\video_core.h" />
+    <ClInclude Include="src\xf_mem.h" />
   </ItemGroup>
 </Project>
